--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "name": "bookstore2",
-  "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "autoprefixer": "^10.0.4",
+    "postcss": "^8.1.13",
+    "postcss-import": "^13.0.0",
+    "tailwindcss": "^2.0.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
